<resources>
    <string name="app_name">project</string>
    <string name="log_in">Log-in</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="click_here">Click here</string>
    <string name="register">Register</string>
    <string name="lblregister">Register</string>
    <string name="new_password">New Password</string>
    <string name="movie">Movie</string>
    <string name="title">title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="book_now">Book Now</string>
    <string name="moviephoto">moviephoto</string>
    <string name="logo">logo</string>
    <string name="enter_fullname">Enter FullName</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_comform_password">Enter Comform Password</string>
    <string name="movie_name">Movie Name</string>
    <string name="movieimg">movieimg</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="theater_name">Theater Name</string>
    <string name="_9_00_am">9:00 AM</string>
    <string name="_3_00_am">3:00 AM</string>
    <string name="_6_00_am">6:00 AM</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="comform_password">Comform Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="complate_your_booking">Complate your booking</string>
    <string name="desh">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="screen">Screen</string>
    <string name="screen_no">Screen No</string>
    <string name="seats">Seats</string>
    <string name="seats_no">Seats no</string>
    <string name="rs">Rs.</string>
    <string name="total">Total</string>
    <string name="process_for_payment">Process for payment.</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="total_tickets">Total Tickets</string>
    <string name="screen1">Screen 1</string>
    <string name="screen2">Screen 2</string>
    <string name="screen3">Screen 3</string>
    <string name="Language">Language</string>
    <string name="ReleseDate">releasedae</string>
    <style name="yo" size="30sp"></style>
</resources>