<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    android:orientation="vertical"
    tools:context=".ShowTime">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtmoviename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/movie_name"
        android:textColor="@color/greenblue"
        android:textSize="40sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginTop="20sp"
            android:layout_below="@id/txtmoviename"
            android:contentDescription="@string/moviephoto"
            android:src="@drawable/rrr_poster"
            tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtmoviename"
        android:layout_marginStart="160sp"
        android:layout_marginTop="20sp"
        android:text="@string/description"
        android:textColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lblcalander"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <com.harrywhewell.scrolldatepicker.DayScrollDatePicker
            android:id="@+id/day_date_picker"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            app:showTitle="false"
            app:showFullDate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:baseColor="@color/black_background"
            app:baseTextColor="@color/white"
            app:selectedColor="@color/black_background"
            app:selectedTextColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn9am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblcalander"
        android:layout_marginStart="40sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/button_style"
        android:text="@string/_9_00_am"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn12am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn9am"
        android:layout_marginStart="40sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/button_style"
        android:textColor="@color/black"
        android:text="@string/_12_00_am"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblcalander"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/button_style"
        android:textColor="@color/black"
        android:text="@string/_3_00_am" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn6am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn3am"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/button_style"
        android:textColor="@color/black"
        android:text="@string/_6_00_am"
        />
    </RelativeLayout>
</ScrollView>