<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:padding="20sp"
    android:background="@color/black_background"
    tools:context=".login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgfirst"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="80sp"
        android:layout_marginBottom="20sp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/lblnewpassword"
        android:layout_below="@id/imgfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/new_password"
        android:padding="10sp"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblnewpassword"
        android:layout_marginBottom="20sp"
        android:hint="@string/enter_new_password"
        android:drawableStart="@drawable/ic_outline_lock"
        android:drawablePadding="15sp"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/txtcomformpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtpassword"
        android:hint="@string/comform_password"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawablePadding="15sp"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:autofillHints="password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnlogin"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtcomformpassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:text="@string/login"
        android:textColor="@color/black"
        android:layout_marginTop="50sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    </RelativeLayout>

</ScrollView>