<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:background="@color/black_background"
    tools:context=".login">

    <ImageView
        android:id="@+id/imgfirst"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginBottom="20sp" />

    <TextView
        android:id="@+id/lbllogin"
        android:layout_below="@id/imgfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:padding="10sp"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbllogin"
        android:layout_marginBottom="20sp"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_baseline_person"
        android:drawablePadding="15sp"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="username"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtusername"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_outline_lock_24"
        android:drawablePadding="15sp"
        android:textColorHint="@color/white"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtpassword"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/greenblue"
        android:text="@string/login"
        android:textColor="@color/black"
        android:layout_marginTop="30sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/lblforgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnlogin"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_password"
        android:textColor="@color/greenblue"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/lbldotaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblforgetpassword"
        android:layout_marginTop="50sp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:layout_marginStart="70sp"
        android:layout_marginEnd="10sp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblregisterlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblforgetpassword"
        android:layout_toEndOf="@id/lbldotaccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:text="@string/click_here"
        android:textColor="@color/greenblue"
        android:textSize="15sp" />

</RelativeLayout>