<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    android:orientation="vertical"
    tools:context=".BookedSeats">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblmoviename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:layout_marginTop="20sp"
        android:textColor="@color/greenblue"
        android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wed, 25 Jan"
            android:textColor="@color/white"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:layout_below="@id/lblmoviename"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/lblmoviename"
            android:background="@drawable/button_style"
            android:text="@string/_9_00_am"
            android:textColor="@color/black" />

<LinearLayout
    android:id="@+id/steatrowA"
    android:layout_below="@id/btn"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="25sp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:textSize="15sp"
        android:textColor="@color/white"
        />

    <CheckBox
        android:id="@+id/seatA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seatA2"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:id="@+id/seatA3"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seatA4"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seatA5" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seatA6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steatrowB"
            android:layout_below="@id/steatrowA"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B"
                android:textSize="15sp"
                android:textColor="@color/white"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatB1" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatB2" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:id="@+id/seatB3" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatB4" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatB5" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatB6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steatrowC"
            android:layout_below="@id/steatrowB"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:textSize="15sp"
                android:textColor="@color/white"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatC1" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatC2" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:id="@+id/seatC3" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatC4" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatC5" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatC6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steatrowD"
            android:layout_below="@id/steatrowC"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D"
                android:textSize="15sp"
                android:textColor="@color/white"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatD1"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatD2"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:id="@+id/seatD3"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatD4"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatD5"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatD6"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steatrowE"
            android:layout_below="@id/steatrowD"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E"
                android:textSize="15sp"
                android:textColor="@color/white"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatE1"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatE2"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:id="@+id/seatE3"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatE4"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatE5"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatE6"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/steatrowF"
            android:layout_below="@id/steatrowE"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F"
                android:textSize="15sp"
                android:textColor="@color/white"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatF1"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatF2"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:id="@+id/seatF3"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatF4"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatF5"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seatF6"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnbooknow"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/steatrowF"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25sp"
            android:background="@drawable/button_style"
            android:text="@string/book_now" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="400sp"
            android:layout_height="150sp"
            android:layout_below="@id/btnbooknow"
            android:layout_centerInParent="true"
            android:layout_marginTop="20sp"
            android:contentDescription="@string/moviephoto"
            android:src="@drawable/screen"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>

</ScrollView>